--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
     }
 
     #random-option {
-      text-align: center;
-      margin-top: 20px;
-      margin-bottom:20px;
-      color: #333;
-      font-size: 18px;
-      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
     }
     #random-option label {
-      display: inline-block;
+      display: flex;
+      align-items: center;
       cursor: pointer;
       padding:10px 20px;
       border:2px solid #007BFF;
@@ -341,6 +341,9 @@
       <label>
         <input type="checkbox" id="random-checkbox"> 随机题序
       </label>
+      <label>
+        <input type="checkbox" id="autonext-checkbox"> 自动翻题
+      </label>
     </div>
 
     <div id="sheet-selection">加载中...</div>
@@ -390,6 +393,7 @@
     <h2>考试结束</h2>
     <div style="text-align: center;">
       <p id="score" style="font-size: 32px; font-weight: bold; color: #333;"></p>
+      <p id="mistake-count" style="font-size: 20px; color: #dc3545;"></p>
       <p id="completion-status"></p>
       <div class="progress-bar-container">
         <div class="progress-bar" id="progress-bar">0%</div>
@@ -403,6 +407,7 @@
     <h2>本次错题</h2>
     <div id="current-mistakes-list"></div>
     <button onclick="startMistakeReview()">复习错题</button>
+    <button onclick="showScore()">返回评分</button>
     <button onclick="resetQuiz()">返回首页</button>
   </div>
 
@@ -453,6 +458,7 @@
     <ul>
       <li><strong>选择套题：</strong>从多个套题中选择您想要练习的题目。</li>
       <li><strong>随机题序：</strong>开启后，题目将以随机顺序出现，帮助您更好地掌握知识点。</li>
+      <li><strong>自动翻题：</strong>开启后，选择答案后将自动跳转到下一题，无需手动点击“下一题”。</li>
       <li><strong>继续考试：</strong>如果您有未完成的考试，可以随时继续之前的考试。</li>
       <li><strong>汇总表现：</strong>查看您的做题历史和表现，了解自己的学习进度和薄弱环节。</li>
       <li><strong>错题复习：</strong>查看并复习您之前做错的题目，帮助您巩固薄弱环节。</li>
@@ -495,6 +501,14 @@
       saveRandomOrderSetting(randomOrder);
     });
 
+    let autoNext = loadAutoNextSetting();
+    const autoNextCheckbox = document.getElementById('autonext-checkbox');
+    autoNextCheckbox.checked = autoNext;
+    autoNextCheckbox.addEventListener('change', () => {
+      autoNext = autoNextCheckbox.checked;
+      saveAutoNextSetting(autoNext);
+    });
+
     const continueExamBtn = document.getElementById('continue-exam-btn');
     const savedExam = loadCurrentExam();
     if(savedExam) {
@@ -504,6 +518,13 @@
     getClientIPAndLogAccess();
     fetchSheetNames();
 
+    // Handle beforeunload to save state
+    window.addEventListener('beforeunload', () => {
+      if(document.getElementById('quiz-container').style.display === 'block') {
+        saveCurrentExam();
+      }
+    });
+
     function loadRandomOrderSetting() {
       const setting = localStorage.getItem('randomOrder');
       return setting === 'true'; 
@@ -511,6 +532,15 @@
 
     function saveRandomOrderSetting(value) {
       localStorage.setItem('randomOrder', value ? 'true' : 'false');
+    }
+
+    function loadAutoNextSetting() {
+      const setting = localStorage.getItem('autoNext');
+      return setting === 'true'; 
+    }
+
+    function saveAutoNextSetting(value) {
+      localStorage.setItem('autoNext', value ? 'true' : 'false');
     }
 
     function loadCurrentExam() {
@@ -525,6 +555,7 @@
         userAnswers,
         questions,
         randomOrder,
+        autoNext,
         elapsedTime
       };
       localStorage.setItem('currentExam', JSON.stringify(currentExam));
@@ -808,6 +839,15 @@
       if (answer === '⭕') document.getElementById('btn-correct').classList.add('highlight');
       if (answer === '❌') document.getElementById('btn-wrong').classList.add('highlight');
       saveCurrentExam();
+
+      if(autoNext) {
+        setTimeout(() => {
+          if (currentQuestionIndex < questions.length - 1) {
+            currentQuestionIndex++;
+            loadQuestion();
+          }
+        }, 300); // 延迟以便用户看到选择的高亮效果
+      }
     }
 
     function resetButtonHighlight() {
@@ -909,7 +949,7 @@
       userAnswers.forEach(ans => {
         if(ans === '⭕') totalScore += scorePerQuestion;
       });
-      totalScore = Math.floor(totalScore); // 取整数部分
+      totalScore = Math.floor(totalScore); // 向下取整
       if(totalScore > 100) totalScore = 100; // 防止超出100
 
       // 确定评分语气
@@ -938,6 +978,7 @@
       document.getElementById('quiz-container').style.display = 'none';
       document.getElementById('result-container').style.display = 'block';
       document.getElementById('score').innerText = `得分：${totalScore}分 - ${scoreMessage}`;
+      document.getElementById('mistake-count').innerText = `错题数：${incorrectCount}题`;
       document.getElementById('completion-status').innerText = `完成度：${answeredQuestions}/${totalQuestions}`;
 
       // 保存历史记录
@@ -1200,6 +1241,11 @@
       summaryContent.innerHTML = html;
     }
 
+    function showScore() {
+      document.getElementById('current-mistakes-container').style.display = 'none';
+      document.getElementById('result-container').style.display = 'block';
+    }
+
     function clearAllHistory() {
       const confirmClear = confirm("清除历史会导致错题集、未完成考试记录和相关设置全部清空，确定要清除吗？");
       if(confirmClear) {
@@ -1355,7 +1401,7 @@
         alert("没有未完成的考试记录");
         return;
       }
-      const {sheetName, currentQuestionIndex: idx, userAnswers:ua, questions:qs, elapsedTime: et} = exam;
+      const {sheetName, currentQuestionIndex: idx, userAnswers:ua, questions:qs, randomOrder: ro, autoNext: an, elapsedTime: et} = exam;
       const total = qs.length;
       const progress = idx + 1;
       const confirmContinue = confirm(`检测到您上次考试未完成（套题名称：${sheetName}，进度：${progress}/${total}），是否继续？`);
@@ -1364,8 +1410,10 @@
         currentQuestionIndex = idx;
         userAnswers = ua;
         questions = qs;
-        randomOrder = exam.randomOrder;
-        elapsedTime = et; // 恢复已花费时间
+        randomOrder = ro;
+        autoNext = an;
+        elapsedTime = et || 0; // 恢复已花费时间，避免NaN
+        autoNextCheckbox.checked = autoNext; // 更新UI
         startQuizFromState();
       } else {
         clearCurrentExam();
@@ -1378,9 +1426,9 @@
       timerInterval = setInterval(() => {
         const now = new Date();
         const elapsed = now - quizStartTime + elapsedTime;
-        const minutes = String(Math.floor(elapsed / 60000)).padStart(2, '0');
-        const seconds = String(Math.floor((elapsed % 60000) / 1000)).padStart(2, '0');
-        timerElem.innerText = `时间：${minutes}分钟${seconds}秒`;
+        const minutes = Math.floor(elapsed / 60000);
+        const seconds = Math.floor((elapsed % 60000) / 1000);
+        timerElem.innerText = `时间：${String(minutes).padStart(2, '0')}分钟${String(seconds).padStart(2, '0')}秒`;
       }, 1000);
     }
 
